# job_hunting_crew

./: .env_example  .gitignore  README.md  main.py  pyproject.toml
src/: crew.py
src/config/: agents.yaml  tasks.yaml
src/tools/: pdf_read_tools.py
