[tool.poetry]
name = "ai_career_coach"
version = "0.1.0"
description = "AI Career Coach for job hunting, resume writing, interview preparation, and career development."
authors = ["Eddie Chan"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
crewai = "^0.22.5"
crewai-tools= "^0.0.15"
unstructured = "==0.10.25"
pyowm = "^3.2.0"
tools = "^0.1.9"
python-dotenv = "^1.0.0"
requests = "^2.26.0"
PyPDF2 = ">=3.0.1"


[tool.pyright]
useLibraryCodeForTypes= true
exclude = ["**/venv/**", "**/.venv/**", "**/env/**", "**/.env/**", "**/.vscode/**", "**/.git/**", "**/.mypy_cache/**", "**/.pytest_cache/**", "**/node_modules/**", "**/dist/**", "**/build/**", "**/out/**", "**/builds/**", "**/logs"]

[tool.ruff]
select= ["**/*.py"]
ignore = ["**/venv/**", "**/.venv/**", "**/env/**", "**/.env/**", "**/.vscode/**", "**/.git/**", "**/.mypy_cache/**", "**/.pytest_cache/**", "**/node_modules/**", "**/dist/**", "**/build/**", "**/out/**", "**/builds/**", "**/logs"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"